# ollama-gradio-webui

./: README.md  app.py  prompt.json  pyproject.toml  requirements.txt
ollama_gradio_webui.egg-info/: PKG-INFO  SOURCES.txt
